--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1> Branching </h1>
   <h2> A website to practice branching with Git. </h2>
   <p> This page has been created in order to practice branching with Git and GitHub. By creating branches, we can work on different versions of the same code in the same repository simultaneously! </p>
+  <p>Another notable lesson i have learn here is clonining. The command is git clone github/(username)/project name or repo</p>
 </body>
+
 
 </html>
